--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="hint_text_color">#757575</color>
+    <color name="correct_answer_color">#87D68C</color>
+    <color name="incorrect_answer_color">#F39494</color>
 </resources>
