--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,9 @@
     <dimen name="button_corner_radius">10dp</dimen>
     <dimen name="button_text_size">18sp</dimen>
     <dimen name="button_pudding">10dp</dimen>
-    <dimen name="question_padding">30dp</dimen>
     <dimen name="question_height">280dp</dimen>
+    <dimen name="question_pudding_top">10dp</dimen>
+    <dimen name="question_pudding_bottom">24dp</dimen>
     <dimen name="hint_text_size">22sp</dimen>
     <dimen name="card_margin">20dp</dimen>
 </resources>
