--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:gravity="center"
         android:text="@string/app_name"
         android:textAllCaps="true"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/brand_color"
         android:textSize="25sp"
         android:textStyle="bold" />
 
@@ -56,8 +56,8 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/button_text_size"
                 app:cornerRadius="@dimen/button_corner_radius"
-                app:rippleColor="@color/purple_200"
-                app:strokeColor="@color/purple_500"
+                app:rippleColor="@color/btn_ripple_color"
+                app:strokeColor="@color/btn_stroke_color"
                 app:strokeWidth="@dimen/button_stroke_width" />
 
             <com.google.android.material.button.MaterialButton
@@ -73,8 +73,8 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/button_text_size"
                 app:cornerRadius="@dimen/button_corner_radius"
-                app:rippleColor="@color/purple_200"
-                app:strokeColor="@color/purple_500"
+                app:rippleColor="@color/btn_ripple_color"
+                app:strokeColor="@color/btn_stroke_color"
                 app:strokeWidth="@dimen/button_stroke_width" />
 
             <com.google.android.material.button.MaterialButton
@@ -90,8 +90,8 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/button_text_size"
                 app:cornerRadius="@dimen/button_corner_radius"
-                app:rippleColor="@color/purple_200"
-                app:strokeColor="@color/purple_500"
+                app:rippleColor="@color/btn_ripple_color"
+                app:strokeColor="@color/btn_stroke_color"
                 app:strokeWidth="@dimen/button_stroke_width" />
 
         </LinearLayout>
