--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -20,7 +20,7 @@
             android:gravity="center"
             android:text="@string/app_name"
             android:textAllCaps="true"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/brand_color"
             android:textSize="25sp"
             android:textStyle="bold" />
 
@@ -67,7 +67,7 @@
                     android:indeterminate="false"
                     android:max="6"
                     android:progress="1"
-                    android:progressTint="@color/purple_500" />
+                    android:progressTint="@color/progress_color" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/first_option"
@@ -81,8 +81,8 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/button_text_size"
                     app:cornerRadius="@dimen/button_corner_radius"
-                    app:rippleColor="@color/purple_200"
-                    app:strokeColor="@color/purple_500"
+                    app:rippleColor="@color/btn_ripple_color"
+                    app:strokeColor="@color/btn_stroke_color"
                     app:strokeWidth="@dimen/button_stroke_width" />
 
                 <com.google.android.material.button.MaterialButton
@@ -97,8 +97,8 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/button_text_size"
                     app:cornerRadius="@dimen/button_corner_radius"
-                    app:rippleColor="@color/purple_200"
-                    app:strokeColor="@color/purple_500"
+                    app:rippleColor="@color/btn_ripple_color"
+                    app:strokeColor="@color/btn_stroke_color"
                     app:strokeWidth="@dimen/button_stroke_width" />
 
                 <com.google.android.material.button.MaterialButton
@@ -113,8 +113,8 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/button_text_size"
                     app:cornerRadius="@dimen/button_corner_radius"
-                    app:rippleColor="@color/purple_200"
-                    app:strokeColor="@color/purple_500"
+                    app:rippleColor="@color/btn_ripple_color"
+                    app:strokeColor="@color/btn_stroke_color"
                     app:strokeWidth="@dimen/button_stroke_width" />
 
                 <com.google.android.material.button.MaterialButton
@@ -129,8 +129,8 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/button_text_size"
                     app:cornerRadius="@dimen/button_corner_radius"
-                    app:rippleColor="@color/purple_200"
-                    app:strokeColor="@color/purple_500"
+                    app:rippleColor="@color/btn_ripple_color"
+                    app:strokeColor="@color/btn_stroke_color"
                     app:strokeWidth="@dimen/button_stroke_width" />
 
 
