--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:text="@string/app_name"
         android:textAllCaps="true"
         android:textColor="@color/brand_color"
-        android:textSize="25sp"
+        android:textSize="@dimen/brand_text_size"
         android:textStyle="bold" />
 
     <androidx.cardview.widget.CardView
@@ -24,13 +24,13 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/card_margin"
         android:backgroundTint="@color/white"
-        android:elevation="10dp"
-        app:cardCornerRadius="20dp">
+        android:elevation="@dimen/card_elevation"
+        app:cardCornerRadius="@dimen/card_corner_radius">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_margin="@dimen/inner_layout_margin"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -41,7 +41,7 @@
                 android:text="@string/tv_choose_category"
                 android:textColor="@color/hint_text_color"
                 android:textSize="@dimen/hint_text_size"
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginBottom="@dimen/hint_bottom_margin"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/random_questions"
