--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -21,7 +21,7 @@
             android:text="@string/app_name"
             android:textAllCaps="true"
             android:textColor="@color/brand_color"
-            android:textSize="25sp"
+            android:textSize="@dimen/brand_text_size"
             android:textStyle="bold" />
 
         <androidx.cardview.widget.CardView
@@ -29,13 +29,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/card_margin"
             android:backgroundTint="@color/white"
-            android:elevation="10dp"
-            app:cardCornerRadius="20dp">
+            android:elevation="@dimen/card_elevation"
+            app:cardCornerRadius="@dimen/card_corner_radius">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
+                android:layout_margin="@dimen/inner_layout_margin"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -55,8 +55,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/question_height"
                     android:contentDescription="@string/image_for_question_description"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="24dp"
+                    android:paddingTop="@dimen/question_image_top_padding"
+                    android:paddingBottom="@dimen/question_image_bottom_padding"
                     android:visibility="gone" />
 
                 <ProgressBar
