--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,9 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:background="@drawable/main_background"
     tools:context=".ResultActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/app_name"
+        android:textAllCaps="true"
+        android:textColor="@color/brand_color"
+        android:textSize="@dimen/brand_text_size"
+        android:textStyle="bold" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/card_margin"
+        android:backgroundTint="@color/white"
+        android:elevation="@dimen/card_elevation"
+        app:cardCornerRadius="@dimen/card_corner_radius">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/inner_layout_margin"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="@string/your_result"
+                android:textColor="@color/hint_text_color"
+                android:textSize="@dimen/hint_text_size" />
+
+            <TextView
+                android:id="@+id/result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:textColor="@color/result_color"
+                android:textStyle="bold"
+                android:textSize="@dimen/result_text_size"
+                android:layout_marginBottom="@dimen/result_bottom_margin"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="top|center_horizontal"
+                android:text="@string/best_result"
+                android:textColor="@color/hint_text_color"
+                android:textSize="@dimen/hint_text_size" />
+
+            <TextView
+                android:id="@+id/best_result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="0/6"
+                android:textColor="@color/result_color"
+                android:textStyle="bold"
+                android:textSize="@dimen/result_text_size"
+                android:layout_marginBottom="@dimen/result_bottom_margin"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/to_categories"
+                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:stateListAnimator="@null"
+                android:padding="@dimen/button_pudding"
+                android:text="@string/to_categories_text"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="@dimen/button_text_size"
+                app:cornerRadius="@dimen/button_corner_radius"
+                app:rippleColor="@color/btn_ripple_color"
+                app:strokeColor="@color/btn_stroke_color"
+                app:strokeWidth="@dimen/button_stroke_width" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</LinearLayout>
