--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,13 @@
     <dimen name="question_pudding_bottom">24dp</dimen>
     <dimen name="hint_text_size">22sp</dimen>
     <dimen name="card_margin">20dp</dimen>
+    <dimen name="brand_text_size">25sp</dimen>
+    <dimen name="card_elevation">10dp</dimen>
+    <dimen name="card_corner_radius">20dp</dimen>
+    <dimen name="inner_layout_margin">20dp</dimen>
+    <dimen name="hint_bottom_margin">10dp</dimen>
+    <dimen name="question_image_top_padding">10dp</dimen>
+    <dimen name="question_image_bottom_padding">24dp</dimen>
+    <dimen name="result_text_size">24sp</dimen>
+    <dimen name="result_bottom_margin">10dp</dimen>
 </resources>
