--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -75,6 +75,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/white"
+                    android:elevation="@dimen/button_elevation"
                     android:stateListAnimator="@null"
                     android:padding="@dimen/button_pudding"
                     android:textAlignment="center"
@@ -91,6 +92,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/white"
+                    android:elevation="@dimen/button_elevation"
                     android:stateListAnimator="@null"
                     android:padding="@dimen/button_pudding"
                     android:textAlignment="center"
@@ -107,6 +109,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/white"
+                    android:elevation="@dimen/button_elevation"
                     android:stateListAnimator="@null"
                     android:padding="@dimen/button_pudding"
                     android:textAlignment="center"
@@ -123,6 +126,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/white"
+                    android:elevation="@dimen/button_elevation"
                     android:stateListAnimator="@null"
                     android:padding="@dimen/button_pudding"
                     android:textAlignment="center"
