--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -46,11 +46,30 @@
                 android:id="@+id/result"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/result_bottom_margin"
                 android:gravity="center_horizontal"
                 android:textColor="@color/result_color"
-                android:textStyle="bold"
                 android:textSize="@dimen/result_text_size"
-                android:layout_marginBottom="@dimen/result_bottom_margin"/>
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/result_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/result_text_bottom_margin"
+                android:gravity="center"
+                android:textColor="@color/btn_stroke_color"
+                android:textSize="@dimen/hint_text_size"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/result_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:paddingHorizontal="10dp"
+                android:scaleType="fitXY"
+                android:contentDescription="@string/result_image_content_description" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/to_categories"
@@ -58,8 +77,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/white"
-                android:stateListAnimator="@null"
+                android:elevation="@dimen/button_elevation"
+                android:insetTop="0dp"
                 android:padding="@dimen/button_pudding"
+                android:stateListAnimator="@null"
                 android:text="@string/to_categories_text"
                 android:textAlignment="center"
                 android:textColor="@color/black"
