--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,6 +108,24 @@
                 app:strokeColor="@color/btn_stroke_color"
                 app:strokeWidth="@dimen/button_stroke_width" />
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/your_results"
+                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:elevation="@dimen/button_elevation"
+                android:stateListAnimator="@null"
+                android:padding="@dimen/button_pudding"
+                android:text="@string/your_results"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="@dimen/button_text_size"
+                app:cornerRadius="@dimen/button_corner_radius"
+                app:rippleColor="@color/btn_ripple_color"
+                app:strokeColor="@color/btn_stroke_color"
+                app:strokeWidth="@dimen/button_stroke_width" />
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
