--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/card_margin"
+        android:layout_marginHorizontal="@dimen/main_margin"
         android:adjustViewBounds="true"
         android:contentDescription="@string/brand_image_content_description"
         android:paddingHorizontal="@dimen/brand_image_padding_horizontal"
@@ -32,7 +32,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/card_margin"
+        android:layout_marginHorizontal="@dimen/main_margin"
         android:layout_marginBottom="100dp"
         android:backgroundTint="@color/white"
         android:elevation="@dimen/card_elevation"
@@ -63,7 +63,7 @@
                 android:elevation="@dimen/button_elevation"
                 android:padding="@dimen/button_pudding"
                 android:stateListAnimator="@null"
-                android:text="@string/tv_random_questions"
+                android:text="@string/random_questions"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="@dimen/button_text_size"
@@ -81,7 +81,7 @@
                 android:elevation="@dimen/button_elevation"
                 android:stateListAnimator="@null"
                 android:padding="@dimen/button_pudding"
-                android:text="@string/tv_text_questions"
+                android:text="@string/text_questions"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="@dimen/button_text_size"
@@ -99,7 +99,7 @@
                 android:elevation="@dimen/button_elevation"
                 android:stateListAnimator="@null"
                 android:padding="@dimen/button_pudding"
-                android:text="@string/tv_guess_member"
+                android:text="@string/image_questions"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="@dimen/button_text_size"
@@ -117,7 +117,7 @@
                 android:elevation="@dimen/button_elevation"
                 android:stateListAnimator="@null"
                 android:padding="@dimen/button_pudding"
-                android:text="@string/your_results"
+                android:text="@string/button_text_results"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="@dimen/button_text_size"
