--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -27,7 +27,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/card_margin"
+            android:layout_margin="@dimen/main_margin"
             android:backgroundTint="@color/white"
             android:elevation="@dimen/card_elevation"
             app:cardCornerRadius="@dimen/card_corner_radius">
@@ -43,17 +43,17 @@
                 <TextView
                     android:id="@+id/text_question"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/question_height"
+                    android:layout_height="@dimen/tv_question_height"
                     android:gravity="center"
-                    android:paddingTop="@dimen/question_pudding_top"
-                    android:paddingBottom="@dimen/question_pudding_bottom"
+                    android:paddingTop="@dimen/tv_question_pudding_top"
+                    android:paddingBottom="@dimen/tv_question_pudding_bottom"
                     android:textSize="@dimen/hint_text_size"
                     android:visibility="gone" />
 
                 <ImageView
                     android:id="@+id/image_question"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/question_height"
+                    android:layout_height="@dimen/tv_question_height"
                     android:contentDescription="@string/image_for_question_description"
                     android:paddingTop="@dimen/question_image_top_padding"
                     android:paddingBottom="@dimen/question_image_bottom_padding"
@@ -67,7 +67,7 @@
                     android:indeterminate="false"
                     android:max="6"
                     android:progress="1"
-                    android:progressTint="@color/progress_color" />
+                    android:progressTint="@color/progress_bar_color" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/first_option"
