--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -22,7 +22,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/card_margin"
+        android:layout_margin="@dimen/main_margin"
         android:backgroundTint="@color/white"
         android:elevation="@dimen/card_elevation"
         app:cardCornerRadius="@dimen/card_corner_radius">
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="@string/your_result"
+                android:text="@string/tv_text_your_result"
                 android:textColor="@color/hint_text_color"
                 android:textSize="@dimen/hint_text_size" />
 
@@ -56,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="@string/best_result"
+                android:text="@string/tv_text_best_result"
                 android:textColor="@color/hint_text_color"
                 android:textSize="@dimen/best_score_text_size" />
 
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textColor="@color/btn_stroke_color"
-                android:textSize="@dimen/congrat_text_size"
+                android:textSize="@dimen/congratulation_text_size"
                 android:textStyle="bold" />
 
             <ImageView
@@ -84,7 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:paddingHorizontal="@dimen/congrat_image_padding_horizontal"
+                android:paddingHorizontal="@dimen/congratulation_image_padding_horizontal"
                 android:scaleType="fitXY"
                 android:contentDescription="@string/result_image_content_description" />
 
