--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,14 +10,19 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <!--  Custom colors  -->
-    <color name="hint_text_color">#757575</color>
     <color name="upper_gradient_color">#837DDB</color>
     <color name="lower_gradient_color">#EB86BE</color>
+
     <color name="brand_color">#F7DCEB</color>
-    <color name="progress_color">#b480cb</color>
+
+    <color name="hint_text_color">#757575</color>
+    <color name="progress_bar_color">#b480cb</color>
+
     <color name="btn_stroke_color">#b681ce</color>
     <color name="btn_ripple_color">#be9dcd</color>
+
     <color name="correct_answer_color">#a6f0b8</color>
     <color name="incorrect_answer_color">#f3a7b2</color>
+
     <color name="result_color">#5e5e5e</color>
 </resources>
