--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="main_margin">20dp</dimen>
+
+    <dimen name="card_elevation">10dp</dimen>
+    <dimen name="card_corner_radius">20dp</dimen>
+    <dimen name="inner_layout_margin">20dp</dimen>
+
+    <dimen name="brand_text_size">24sp</dimen>
+    <dimen name="brand_image_padding_horizontal">20dp</dimen>
+
+    <dimen name="hint_text_size">21sp</dimen>
+    <dimen name="hint_bottom_margin">10dp</dimen>
+
     <dimen name="button_stroke_width">1dp</dimen>
     <dimen name="button_corner_radius">10dp</dimen>
     <dimen name="button_text_size">17sp</dimen>
     <dimen name="button_elevation">1dp</dimen>
     <dimen name="button_pudding">10dp</dimen>
 
-    <dimen name="question_height">280dp</dimen>
-    <dimen name="question_pudding_top">10dp</dimen>
-    <dimen name="question_pudding_bottom">24dp</dimen>
-
-    <dimen name="brand_text_size">24sp</dimen>
-    <dimen name="brand_image_padding_horizontal">20dp</dimen>
-
-    <dimen name="card_margin">20dp</dimen>
-    <dimen name="card_elevation">10dp</dimen>
-    <dimen name="card_corner_radius">20dp</dimen>
-    <dimen name="inner_layout_margin">20dp</dimen>
-
-    <dimen name="hint_text_size">21sp</dimen>
-    <dimen name="hint_bottom_margin">10dp</dimen>
+    <dimen name="tv_question_height">280dp</dimen>
+    <dimen name="tv_question_pudding_top">10dp</dimen>
+    <dimen name="tv_question_pudding_bottom">24dp</dimen>
 
     <dimen name="question_image_top_padding">10dp</dimen>
     <dimen name="question_image_bottom_padding">24dp</dimen>
@@ -27,9 +28,11 @@
     <dimen name="result_text_size">25sp</dimen>
     <dimen name="result_bottom_margin">5dp</dimen>
     <dimen name="result_text_bottom_margin">5dp</dimen>
+
     <dimen name="best_score_text_size">16sp</dimen>
     <dimen name="best_score_margin_bottom">15dp</dimen>
     <dimen name="best_score_size">20sp</dimen>
-    <dimen name="congrat_text_size">24sp</dimen>
-    <dimen name="congrat_image_padding_horizontal">10dp</dimen>
+
+    <dimen name="congratulation_text_size">24sp</dimen>
+    <dimen name="congratulation_image_padding_horizontal">10dp</dimen>
 </resources>
