--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -46,10 +46,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/tv_question_margin_top"
+                    android:layout_marginBottom="@dimen/tv_question_margin_bottom"
                     android:gravity="center"
-                    android:paddingTop="@dimen/tv_question_pudding_top"
-                    android:paddingBottom="@dimen/tv_question_pudding_bottom"
                     android:text="@string/tv_loading_quiz_text"
+                    android:textColor="@color/hint_text_color"
                     android:textSize="@dimen/hint_text_size" />
 
                 <com.google.android.material.progressindicator.LinearProgressIndicator
@@ -64,8 +65,8 @@
                 android:id="@+id/content_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:animateLayoutChanges="true"
                 android:layout_margin="@dimen/inner_layout_margin"
+                android:animateLayoutChanges="true"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:visibility="gone">
@@ -74,9 +75,10 @@
                     android:id="@+id/text_question"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/tv_question_height"
+                    android:layout_marginTop="@dimen/tv_question_margin_top"
+                    android:layout_marginBottom="@dimen/tv_question_margin_bottom"
                     android:gravity="center"
-                    android:paddingTop="@dimen/tv_question_pudding_top"
-                    android:paddingBottom="@dimen/tv_question_pudding_bottom"
+                    android:textColor="@color/hint_text_color"
                     android:textSize="@dimen/hint_text_size"
                     android:visibility="gone" />
 
@@ -84,9 +86,9 @@
                     android:id="@+id/image_question"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/tv_question_height"
+                    android:layout_marginTop="@dimen/question_image_top_margin"
+                    android:layout_marginBottom="@dimen/question_image_bottom_margin"
                     android:contentDescription="@string/image_for_question_description"
-                    android:paddingTop="@dimen/question_image_top_padding"
-                    android:paddingBottom="@dimen/question_image_bottom_padding"
                     android:visibility="gone" />
 
                 <ProgressBar
