Minor dimensional changes, name changes and user timeouts

--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -53,6 +53,7 @@
                     android:layout_marginTop="@dimen/tv_question_margin_top"
                     android:layout_marginBottom="@dimen/tv_question_margin_bottom"
                     android:gravity="center"
+                    android:paddingHorizontal="@dimen/load_text_pudding"
                     android:text="@string/tv_loading_quiz_text"
                     android:textColor="@color/hint_text_color"
                     android:textSize="@dimen/hint_text_size"
@@ -88,6 +89,7 @@
                     android:layout_marginTop="@dimen/tv_question_margin_top"
                     android:layout_marginBottom="@dimen/tv_question_margin_bottom"
                     android:gravity="center"
+                    android:paddingHorizontal="@dimen/tv_question_pudding"
                     android:textColor="@color/hint_text_color"
                     android:textSize="@dimen/hint_text_size"
                     android:visibility="gone"
