--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -55,6 +55,7 @@
                     android:layout_marginTop="@dimen/tv_question_margin_top"
                     android:layout_marginBottom="@dimen/tv_question_margin_bottom"
                     android:gravity="center"
+                    android:paddingHorizontal="@dimen/load_text_pudding"
                     android:text="@string/tv_loading_result_text"
                     android:textColor="@color/hint_text_color"
                     android:textSize="@dimen/hint_text_size"
